# cpp_indie_studio

./: .gitignore  CMakeLists.txt  README.md
include/: GraphicalEngine.hpp  World.hpp
include/Components/: AI.hpp  Acceleration.hpp  Bomb.hpp  BombManager.hpp  Components.hpp  Controllable.hpp  GraphicalBody.hpp  PhysicalBody.hpp  Pickup.hpp  Player.hpp  PlayerCollision.hpp  Position.hpp  Timer.hpp  Velocity.hpp  WallCollision.hpp
include/Entities/: Entity.hpp
include/Interfaces/: IComponent.hpp  ISystem.hpp
include/Managers/: ComponentManager.hpp  EntityManager.hpp
include/Systems/: AISystem.hpp  BombSystem.hpp  CollisionSystem.hpp  ControllableSystem.hpp  DemoSystem.hpp  LoaderSystem.hpp  MovementSystem.hpp  PickupSystem.hpp  RulesCheckerSystem.hpp  Systems.hpp
include/Utils/: ControllableEventHandler.hpp  Logger.hpp  Map.hpp  Menu.hpp
include/core/: Core.hpp
include/core/entities/: BaseEntity.hpp  UserAction.hpp
include/game/: GameManager.hpp  Map.hpp
include/game/entities/: BombEntity.hpp  GameEntity.hpp  PlayerEntity.hpp
include/graphical/: GraphicalEngine.hpp  GraphicalManager.hpp  Menu.hpp  MenuEventHandler.hpp
include/graphical/entities/: GraphicalEntity.hpp
irrlitchtest/: ...b3d  BomberMan.blend  BomberMan.blend1  CMakeLists.txt  a.out  allez.b3d  bomber.b3d  dab.b3d  main.cpp  main.cpp~  meshviewer  ok.b3d  omg.b3d  putain.b3d  re.b3d  redab.b3d  test.b3d
irrlitchtest/menu/: Menu.cpp  Menu.hpp  MenuEventHandler.hpp  main.cpp
libs/irrlicht-1.8.4/doc/docu/: _c_dynamic_mesh_buffer_8h.html  _c_dynamic_mesh_buffer_8h_source.html  _c_index_buffer_8h.html  _c_index_buffer_8h_source.html  _c_mesh_buffer_8h.html  _c_mesh_buffer_8h_source.html  _c_vertex_buffer_8h.html  _c_vertex_buffer_8h_source.html  _e_attributes_8h.html  _e_attributes_8h_source.html  _e_culling_types_8h.html  _e_culling_types_8h_source.html  _e_debug_scene_types_8h.html  _e_debug_scene_types_8h_source.html  _e_device_types_8h.html  _e_device_types_8h_source.html  _e_driver_features_8h.html  _e_driver_features_8h_source.html  _e_driver_types_8h.html  _e_driver_types_8h_source.html  _e_g_u_i_alignment_8h.html  _e_g_u_i_alignment_8h_source.html  _e_g_u_i_element_types_8h.html  _e_g_u_i_element_types_8h_source.html  _e_hardware_buffer_flags_8h.html  _e_hardware_buffer_flags_8h_source.html  _e_material_flags_8h.html  _e_material_flags_8h_source.html  _e_material_types_8h.html  _e_material_types_8h_source.html  _e_mesh_writer_enums_8h.html  _e_mesh_writer_enums_8h_source.html  _e_message_box_flags_8h.html  _e_message_box_flags_8h_source.html  _e_primitive_types_8h.html  _e_primitive_types_8h_source.html  _e_scene_node_animator_types_8h.html  _e_scene_node_animator_types_8h_source.html  _e_scene_node_types_8h.html  _e_scene_node_types_8h_source.html  (+942 more)
libs/irrlicht-1.8.4/doc/html/: _c_dynamic_mesh_buffer_8h.html  _c_dynamic_mesh_buffer_8h_source.html  _c_index_buffer_8h.html  _c_index_buffer_8h_source.html  _c_mesh_buffer_8h.html  _c_mesh_buffer_8h_source.html  _c_vertex_buffer_8h.html  _c_vertex_buffer_8h_source.html  _e_attributes_8h.html  _e_attributes_8h_source.html  _e_culling_types_8h.html  _e_culling_types_8h_source.html  _e_debug_scene_types_8h.html  _e_debug_scene_types_8h_source.html  _e_device_types_8h.html  _e_device_types_8h_source.html  _e_driver_features_8h.html  _e_driver_features_8h_source.html  _e_driver_types_8h.html  _e_driver_types_8h_source.html  _e_g_u_i_alignment_8h.html  _e_g_u_i_alignment_8h_source.html  _e_g_u_i_element_types_8h.html  _e_g_u_i_element_types_8h_source.html  (+961 more)
libs/irrlicht-1.8.4/examples/: BuildAllExamples.workspace
ressources/models/: bomb.mtl  cobblestone.b3d  cobblestone.mtl  explosion.mtl  floor.mtl  glass.mtl  grass3.mtl  iron.mtl  lava.mtl  models.rar  obsi.mtl  pickup1.mtl  pickup2.mtl  playerMinecraft.b3d  wall.mtl  wood.b3d  wood.mtl
src/: GraphicalEngine.cpp  World.cpp  main.cpp  test.cpp
src/Managers/: ComponentManager.cpp  EntityManager.cpp
src/Systems/: AISystem.cpp  BombSystem.cpp  CollisionSystem.cpp  ControllableSystem.cpp  LoaderSystem.cpp  MovementSystem.cpp  PickupSystem.cpp  RulesCheckerSystem.cpp
src/Utils/: Logger.cpp  Map.cpp
src/Utils/menu/: Menu.cpp  MenuEventHandler.cpp
src/core/: Core.cpp
src/game/: GameManager.cpp
src/game/entities/: BombEntity.cpp  GameEntity.cpp  PlayerEntity.cpp
src/graphical/: GraphicalEngine.cpp  GraphicalManager.cpp
src/graphical/entities/: GraphicalEntity.cpp  Renderer.cpp
src/graphical/menu/: Menu.cpp  MenuEventHandler.cpp
src/map/: Map.cpp
(+532 files in other folders)
